# sonic-swss

./: .gitignore  Cargo.toml
crates/buffermgrd/: Cargo.toml
crates/buffermgrd/src/: buffer_mgr.rs  lib.rs  main.rs  pg_bitmap.rs  pg_lookup.rs  tables.rs  types.rs
crates/coppmgrd/: Cargo.toml
crates/coppmgrd/src/: config_merge.rs  copp_mgr.rs  json_parser.rs  lib.rs  main.rs  tables.rs  types.rs
crates/fabricmgrd/: Cargo.toml
crates/fabricmgrd/src/: fabric_mgr.rs  lib.rs  main.rs  tables.rs
crates/intfmgrd/: Cargo.toml
crates/intfmgrd/src/: intf_mgr.rs  ip_operations.rs  lib.rs  main.rs  subintf.rs  subintf_operations.rs  tables.rs  types.rs  vrf_operations.rs
crates/neighsyncd/: BENCHMARKING.md  Cargo.toml  README.md  alerts.yaml  install.sh  neighsyncd.conf.example  neighsyncd.service  profile.sh
crates/neighsyncd/benches/: event_processing.rs  netlink_parsing.rs  redis_operations.rs  warm_restart.rs
crates/neighsyncd/dashboards/: neighsyncd.json
crates/neighsyncd/docs/: BEHAVIOR_DIFFERENCES.md  MIGRATION.md  MIGRATION_TESTING.md  MONITORING.md
crates/neighsyncd/src/: advanced_health.rs  alerting.rs  auto_tuner.rs  distributed_lock.rs  error.rs  grpc_api.rs  health_monitor.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs  neigh_sync.rs  netlink.rs  profiling.rs  redis_adapter.rs  rest_api.rs  state_replication.rs  tracing_integration.rs  types.rs  vrf.rs
crates/neighsyncd/tests/: chaos_testing.rs  integration_tests.rs  load_testing.rs  redis_helper.rs  redis_integration_tests.rs  warm_restart_integration.rs
crates/orchagent/: Cargo.toml  INTEGRATION_TESTS.md  MISSING_INTEGRATION_TESTS.md  SESSION_4_PROGRESS.md  SESSION_SUMMARY.md  TEST_SUMMARY.md
crates/orchagent/src/: audit.rs  lib.rs  main.rs
crates/orchagent/src/acl/: ffi.rs  mod.rs  orch.rs  range.rs  rule.rs  table.rs  table_type.rs  types.rs
crates/orchagent/src/bfd/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/buffer/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/chassis/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/copp/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/countercheck/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/crm/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/daemon/: mod.rs  orchdaemon.rs
crates/orchagent/src/debug_counter/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/dtel/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/fabric_ports/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/fdb/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/fg_nhg/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/flex_counter/: ffi.rs  group.rs  mod.rs  orch.rs  state.rs
crates/orchagent/src/icmp/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/intfs/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/isolation_group/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/macsec/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/mirror/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/mlag/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/mplsroute/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/mux/: ffi.rs  mod.rs  orch.rs  types.rs
crates/orchagent/src/nat/: ffi.rs  mod.rs  (+2 more)
crates/orchagent/tests/: integration_test.rs
crates/portmgrd/: Cargo.toml
crates/portmgrd/src/: lib.rs  main.rs  port_mgr.rs  tables.rs
crates/portsyncd/: ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  P384_SHA384_REQUIREMENT.md  PERFORMANCE.md  PHASE5_COMPLETION.md  PHASE6_DELIVERABLES.md  PHASE6_PLANNING.md  PHASE6_SECURITY_HARDENING.md  PHASE6_WEEK1_COMPLETION.md  PHASE6_WEEK2_COMPLETION.md  PHASE6_WEEK3_API.md  PHASE6_WEEK3_COMPLETION.md  PHASE6_WEEK3_PLAN.md  PHASE6_WEEK3_PROGRESS.md  PHASE6_WEEK4_PLAN.md  PHASE7_FINAL_SUMMARY.md  PHASE7_WEEK2_COMPLETION.md  PHASE7_WEEK3_COMPLETION.md  PHASE7_WEEK4_COMPLETION.md  PHASE7_WEEK6_COMPLETION.md  README.md  README_DEPLOYMENT.md  TELEMETRY_ANALYSIS.md  TLS13_CNSA2_COMPLIANCE.md  portsyncd.conf.example  portsyncd.service
crates/portsyncd/dashboards/: alert_dashboard.json  sync_performance.json  system_health_overview.json  trend_analysis.json
crates/portsyncd/src/: alerting.rs  audit_integration.rs  config.rs  config_file.rs  eoiu_detector.rs  error.rs  lib.rs  main.rs  metrics.rs  metrics_exporter.rs  metrics_server.rs  netlink_socket.rs  performance.rs  port_sync.rs  production_db.rs  production_features.rs  promql_queries.rs  redis_adapter.rs  trend_analysis.rs  warm_restart.rs
crates/portsyncd/tests/: chaos_network.rs  chaos_state.rs  integration_tests.rs  metrics_export_integration.rs  metrics_integration.rs  performance_bench.rs  performance_profiling.rs  security_audit.rs  stability_testing.rs  stress_dashboard_load.rs  stress_event_frequency.rs  stress_port_scaling.rs  warm_restart_integration.rs  week5_integration.rs
crates/sonic-cfgmgr-common/: Cargo.toml
crates/sonic-cfgmgr-common/src/: error.rs  lib.rs  manager.rs  shell.rs
crates/sonic-cfgmgr-test/: Cargo.toml
crates/sonic-cfgmgr-test/src/: fixtures.rs  lib.rs  redis_env.rs  verification.rs
crates/sonic-cfgmgr-test/tests/: multi_manager_integration.rs  performance_baseline.rs
crates/sonic-ffi-bridge/: Cargo.toml
crates/sonic-ffi-bridge/src/: cpp_bridge.rs  lib.rs  rust_exports.rs
crates/sonic-orch-common/: Cargo.toml
crates/sonic-orch-common/src/: consumer.rs  lib.rs  orch.rs  redis_backend.rs  retry.rs  sync_map.rs  task.rs
crates/sonic-sai/: Cargo.toml  build.rs
crates/sonic-sai/src/: error.rs  lib.rs  types.rs
crates/sonic-types/: Cargo.toml
crates/sonic-types/src/: ip.rs  lib.rs  mac.rs  port.rs  vlan.rs
crates/tunnelmgrd/: Cargo.toml
crates/tunnelmgrd/src/: commands.rs  lib.rs  main.rs  tables.rs  tunnel_mgr.rs  types.rs
crates/vlanmgrd/: Cargo.toml
crates/vlanmgrd/src/: bridge.rs  commands.rs  lib.rs  main.rs  tables.rs  types.rs  vlan_mgr.rs
crates/vrfmgrd/: Cargo.toml
crates/vrfmgrd/src/: commands.rs  lib.rs  main.rs  tables.rs  types.rs  vrf_mgr.rs
(+194 files in other folders)
