[package]
name = "sonic-fabricmgrd"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SONiC crates
sonic-cfgmgr-common = { path = "../sonic-cfgmgr-common" }
sonic-orch-common = { path = "../sonic-orch-common" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "fabricmgrd"
path = "src/main.rs"

[lib]
name = "sonic_fabricmgrd"
path = "src/lib.rs"
