[package]
name = "sonic-neighsyncd"
version.workspace = true
edition = "2024"
rust-version = "1.85"
authors.workspace = true
description = "Neighbor synchronization daemon for SONiC - Rust rewrite (IPv6-only by default)"
license.workspace = true

[[bin]]
name = "neighsyncd"
path = "src/main.rs"

[[bin]]
name = "neighsyncd-benchmark"
path = "src/bin/benchmark.rs"

[features]
default = []
# Enable IPv4/ARP neighbor discovery support (disabled by default)
ipv4 = []
# Enable both IPv4 and IPv6 (convenience feature)
dual-stack = ["ipv4"]

# Performance optimizations (see docs/rust/neighsyncd/PERFORMANCE.md)
# NIST: SC-5 - DoS protection via optimized event handling
perf-fxhash = ["rustc-hash"] # FxHashMap for faster interface lookups
perf-all = ["perf-fxhash"]   # Enable all performance features

[dependencies]
# Async runtime - use workspace version for compatibility
tokio = { workspace = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Standard library extensions
futures = "0.3"
async-trait = "0.1"

# Redis client for SWSS database
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }

# SONiC shared types (MacAddress, IpAddress, etc.)
sonic-types = { workspace = true }

# Performance: FxHashMap for faster small-key lookups
rustc-hash = { version = "2.1", optional = true }

# libc for socket options
libc = "0.2"

# CLI argument parsing for benchmark tool
clap = { version = "4.4", features = ["derive"] }

# Monitoring/Observability
prometheus = "0.14"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"

# Netlink for kernel socket integration - Linux only
[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.28"
netlink-packet-core = "0.8"
netlink-sys = "0.8"
nix = { version = "0.31", features = ["net", "socket"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
tempfile = "3.15"
testcontainers = "0.26"
criterion = { version = "0.8", features = ["html_reports"] }
