[package]
name = "sonic-portmgrd"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Port configuration manager daemon for SONiC (Rust rewrite)"
license.workspace = true
keywords = ["sonic", "cfgmgr", "port", "network"]

[[bin]]
name = "portmgrd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Redis client
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Utilities
once_cell = { workspace = true }

# Internal crates
sonic-cfgmgr-common = { path = "../sonic-cfgmgr-common" }
sonic-orch-common = { path = "../sonic-orch-common" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
tempfile = { workspace = true }
