[package]
name = "sonic-portsyncd"
version.workspace = true
edition = "2024"
rust-version = "1.92"
authors.workspace = true
description = "Port synchronization daemon for SONiC - Rust rewrite"
license.workspace = true

[[bin]]
name = "portsyncd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Standard library extensions
parking_lot = "0.12"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
