[package]
name = "sonic-portsyncd"
version.workspace = true
edition = "2024"
rust-version = "1.92"
authors.workspace = true
description = "Port synchronization daemon for SONiC - Rust rewrite"
license.workspace = true

[[bin]]
name = "portsyncd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Standard library extensions
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"

# Redis client for SWSS database (Phase 5 Week 1)
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }

# Systemd integration (Phase 5 Week 3)
sd-notify = "0.4"

# Prometheus metrics (Phase 6 Week 1)
prometheus = "0.14"
axum = "0.8"

# Netlink for kernel socket integration (Phase 5 Week 2) - Linux only
[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.28"
netlink-packet-core = "0.8"
netlink-sys = { workspace = true }
nix = { version = "0.31", features = ["net", "socket"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
# Mock implementation on non-Linux platforms

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
tempfile = "3.8"
