[package]
name = "sonic-orch-common"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true
description = "Common orchestration abstractions for SONiC (Orch trait, Consumer, SyncMap)"

[dependencies]
sonic-types = { path = "../sonic-types" }
sonic-sai = { path = "../sonic-sai" }
swss-common = { workspace = true, optional = true }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"], optional = true }
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
thiserror.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = ["redis"]
# Enable when swss-common native library is available
swss = ["swss-common"]
# Redis database backend support
redis = ["dep:redis"]

[lints]
workspace = true
