[package]
name = "sonic-types"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true
description = "Common SONiC types (MAC address, IP prefix, port types)"

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
