[package]
name = "sonic-vrfmgrd"
version = "0.1.0"
edition = "2021"
description = "VRF configuration manager daemon for SONiC"
license = "Apache-2.0"
repository = "https://github.com/sonic-net/sonic-swss"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Common cfgmgr infrastructure
sonic-cfgmgr-common = { path = "../sonic-cfgmgr-common" }
sonic-orch-common = { path = "../sonic-orch-common" }

[dev-dependencies]
sonic-cfgmgr-test = { path = "../sonic-cfgmgr-test" }

[lib]
name = "sonic_vrfmgrd"
path = "src/lib.rs"

[[bin]]
name = "vrfmgrd"
path = "src/main.rs"
